--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
- 
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>تسجيل بيانات الطلاب</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>تسجيل بيانات الطلاب</h1>
+    <form action="register.php" method="POST">
+        <label for="name">الإسم:</label>
+        <input type="text" id="name" name="name" required>
+
+        <label for="email">البريد الإلكتروني:</label>
+        <input type="email" id="email" name="email" required>
+
+        <label for="password">كلمة المرور:</label>
+        <input type="password" id="password" name="password" required>
+
+        <input type="submit" value="تسجيل">
+    </form>
+</body>
+</html> 
